--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
       </div>
     </div>
     <script src="./script.js"></script>
+    <audio id="background-music" controls autoplay loop>
+      <source src="audio/bgm1.mp3" type="audio/mpeg">
+      Tu navegador no soporta el elemento de audio.
+    </audio>
   </body>
 </html>
