add an inventory

--- a/index.html
+++ b/index.html
@@ -33,6 +33,43 @@
             width="480px"
         />
       </div>
+      <div class="box-title">
+        <strong>Inventory</strong>
+      </div>
+      <div id="inventory-div">
+        <div class="inventory-item">
+          <img 
+            id="item1"
+            class="inventory-item"
+            src="icon/stick.png"  
+            alt="item1"
+          />
+        </div>
+        <div class="inventory-item">
+          <img 
+            id="item2" 
+            class="inventory-item"
+            src="icon/blank.png"
+            alt="item2"
+          />
+        </div>
+        <div class="inventory-item">
+          <img 
+            id="item3" 
+            class="inventory-item"
+            src="icon/blank.png"
+            alt="item3"
+          />
+        </div>
+        <div class="inventory-item">
+          <img 
+            id="item4" 
+            class="inventory-item"
+            src="icon/blank.png"
+            alt="item4"
+          />
+        </div>
+      </div>
     </div>
     <script src="./script.js"></script>
     <audio id="background-music" controls autoplay loop>
