inventory fixes, sell weapon button included

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="button1">Go to store</button>
         <button id="button2">Go to cave</button>
         <button id="button3">Fight dragon</button>
+        <button id="button4">Sell weapon</button>
       </div>
       <div id="monsterStats">
         <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
@@ -72,7 +73,7 @@
       </div>
     </div>
     <script src="./script.js"></script>
-    <audio id="background-music" controls autoplay loop>
+    <audio id="background-music" autoplay loop>
       <source src="audio/bgm1.mp3" type="audio/mpeg">
       Tu navegador no soporta el elemento de audio.
     </audio>
